<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/group_item_github"
            android:icon="@drawable/ic_vector_github_grey"
            android:title="@string/project_home"/>
        <item
            android:id="@+id/group_item_more"
            android:icon="@drawable/ic_vector_more"
            android:title="@string/more_content"/>
        <item
            android:id="@+id/group_item_qr"
            android:icon="@drawable/ic_vector_qr_code"
            android:title="@string/qr_code"/>
        <item
            android:id="@+id/group_item_share"
            android:icon="@drawable/ic_vector_share"
            android:title="@string/share_project"/>
    </group>

    <item android:title="@string/option_str">
        <menu>
            <item
                android:id="@+id/option_item_mode"
                android:icon="@drawable/ic_vetor_setting"
                android:title="@string/night_model"/>

            <item
                android:id="@+id/option_item_about"
                android:icon="@drawable/ic_vector_about"
                android:title="@string/about_str"/>
        </menu>
    </item>

</menu>